testcases/errors/syntax_err.pas
program test;

begin
  writeln(+);
  write(~);
  writeln(3 + 2, );
  writeln(2 + 2 4);
  writeln(1 > 2)
  writeln(1 > 2);
  {tabbed} writeln(a);
end.
